[package]
name = "mytv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "=4.1.6", features = ["derive", "env"] }

tokio = { version = "=1.28.2", features = ["full"] }
tokio-util = {version = "=0.7.8", features = ["full"]}

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

anyhow = "=1.0.71"
# bytes = "=1.1.0"
# socket2 = "=0.4.10"
